--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "express": "~3.5.0"
+  },
+  "devDependencies": {
+    "mocha": "~1.17.1"
   }
 }
