--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "express": "~3.5.0"
   },
   "devDependencies": {
-    "mocha": "~1.17.1"
+    "mocha": "~1.17.1",
+    "grunt": "~0.4.3",
+    "grunt-mocha": "~0.4.10",
+    "grunt-simple-mocha": "~0.4.0"
   }
 }
