--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "grunt-simple-mocha": "~0.4.0",
     "chai": "~1.9.0",
     "chai-as-promised": "~4.1.1",
-    "mocha-as-promised": "~2.0.0",
-    "grunt-shell": "~0.6.4"
+    "mocha-as-promised": "~2.0.0"
   }
 }
